// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Loaders > step0AccessGuard > kaller getPersonQuery, getInntekt, getOmstillingsstoenadOgGjenlevende og getEkskludertStatus og returnerer en defered response med getPerson og en redirect url 1`] = `
DeferredData {
  "abortPromise": Promise {},
  "controller": AbortController {
    Symbol(SameObject caches): {
      "signal": AbortSignal {},
    },
  },
  "data": {
    "getPersonQuery": Promise {},
    "shouldRedirectTo": Promise {},
  },
  "deferredKeys": [
    "getPersonQuery",
    "shouldRedirectTo",
  ],
  "init": {},
  "pendingKeysSet": Set {},
  "subscribers": Set {},
  "unlistenAbortSignal": [Function],
}
`;

exports[`Loaders > step3AccessGuard > kaller redirect til /afp location når samtykke er oppgitt til false 1`] = `
_Response {
  Symbol(realm): {
    "settingsObject": {},
  },
  Symbol(state): {
    "aborted": false,
    "cacheState": "",
    "headersList": _HeadersList {
      "cookies": null,
      Symbol(headers map): Map {
        "location" => {
          "name": "location",
          "value": "/afp",
        },
      },
      Symbol(headers map sorted): null,
    },
    "rangeRequested": false,
    "requestIncludesCredentials": false,
    "status": 302,
    "statusText": "",
    "timingAllowPassed": false,
    "timingInfo": null,
    "type": "default",
    "urlList": [],
  },
  Symbol(headers): _Headers {
    Symbol(headers list): _HeadersList {
      "cookies": null,
      Symbol(headers map): Map {
        "location" => {
          "name": "location",
          "value": "/afp",
        },
      },
      Symbol(headers map sorted): null,
    },
    Symbol(guard): "response",
    Symbol(realm): {
      "settingsObject": {},
    },
  },
}
`;

exports[`Loaders > step3AccessGuard > kaller redirect til /start location, når samtykke er null 1`] = `
_Response {
  Symbol(realm): {
    "settingsObject": {},
  },
  Symbol(state): {
    "aborted": false,
    "cacheState": "",
    "headersList": _HeadersList {
      "cookies": null,
      Symbol(headers map): Map {
        "location" => {
          "name": "location",
          "value": "/start",
        },
      },
      Symbol(headers map sorted): null,
    },
    "rangeRequested": false,
    "requestIncludesCredentials": false,
    "status": 302,
    "statusText": "",
    "timingAllowPassed": false,
    "timingInfo": null,
    "type": "default",
    "urlList": [],
  },
  Symbol(headers): _Headers {
    Symbol(headers list): _HeadersList {
      "cookies": null,
      Symbol(headers map): Map {
        "location" => {
          "name": "location",
          "value": "/start",
        },
      },
      Symbol(headers map sorted): null,
    },
    Symbol(guard): "response",
    Symbol(realm): {
      "settingsObject": {},
    },
  },
}
`;

exports[`Loaders > step4AccessGuard > returnerer redirect til /start location når ingen api kall er registrert 1`] = `
_Response {
  Symbol(realm): {
    "settingsObject": {},
  },
  Symbol(state): {
    "aborted": false,
    "cacheState": "",
    "headersList": _HeadersList {
      "cookies": null,
      Symbol(headers map): Map {
        "location" => {
          "name": "location",
          "value": "/start",
        },
      },
      Symbol(headers map sorted): null,
    },
    "rangeRequested": false,
    "requestIncludesCredentials": false,
    "status": 302,
    "statusText": "",
    "timingAllowPassed": false,
    "timingInfo": null,
    "type": "default",
    "urlList": [],
  },
  Symbol(headers): _Headers {
    Symbol(headers list): _HeadersList {
      "cookies": null,
      Symbol(headers map): Map {
        "location" => {
          "name": "location",
          "value": "/start",
        },
      },
      Symbol(headers map sorted): null,
    },
    Symbol(guard): "response",
    Symbol(realm): {
      "settingsObject": {},
    },
  },
}
`;

exports[`Loaders > step5AccessGuard > Når brukeren har uføretrygd og har valgt nei til spørsmål om afp, er hen redirigert 1`] = `
_Response {
  Symbol(realm): {
    "settingsObject": {},
  },
  Symbol(state): {
    "aborted": false,
    "cacheState": "",
    "headersList": _HeadersList {
      "cookies": null,
      Symbol(headers map): Map {
        "location" => {
          "name": "location",
          "value": "/sivilstand",
        },
      },
      Symbol(headers map sorted): null,
    },
    "rangeRequested": false,
    "requestIncludesCredentials": false,
    "status": 302,
    "statusText": "",
    "timingAllowPassed": false,
    "timingInfo": null,
    "type": "default",
    "urlList": [],
  },
  Symbol(headers): _Headers {
    Symbol(headers list): _HeadersList {
      "cookies": null,
      Symbol(headers map): Map {
        "location" => {
          "name": "location",
          "value": "/sivilstand",
        },
      },
      Symbol(headers map sorted): null,
    },
    Symbol(guard): "response",
    Symbol(realm): {
      "settingsObject": {},
    },
  },
}
`;

exports[`Loaders > step5AccessGuard > Når brukeren ikke har uføretrygd, er hen redirigert 1`] = `
_Response {
  Symbol(realm): {
    "settingsObject": {},
  },
  Symbol(state): {
    "aborted": false,
    "cacheState": "",
    "headersList": _HeadersList {
      "cookies": null,
      Symbol(headers map): Map {
        "location" => {
          "name": "location",
          "value": "/sivilstand",
        },
      },
      Symbol(headers map sorted): null,
    },
    "rangeRequested": false,
    "requestIncludesCredentials": false,
    "status": 302,
    "statusText": "",
    "timingAllowPassed": false,
    "timingInfo": null,
    "type": "default",
    "urlList": [],
  },
  Symbol(headers): _Headers {
    Symbol(headers list): _HeadersList {
      "cookies": null,
      Symbol(headers map): Map {
        "location" => {
          "name": "location",
          "value": "/sivilstand",
        },
      },
      Symbol(headers map sorted): null,
    },
    Symbol(guard): "response",
    Symbol(realm): {
      "settingsObject": {},
    },
  },
}
`;

exports[`Loaders > step5AccessGuard > returnerer redirect til /start location når ingen api kall er registrert 1`] = `
_Response {
  Symbol(realm): {
    "settingsObject": {},
  },
  Symbol(state): {
    "aborted": false,
    "cacheState": "",
    "headersList": _HeadersList {
      "cookies": null,
      Symbol(headers map): Map {
        "location" => {
          "name": "location",
          "value": "/start",
        },
      },
      Symbol(headers map sorted): null,
    },
    "rangeRequested": false,
    "requestIncludesCredentials": false,
    "status": 302,
    "statusText": "",
    "timingAllowPassed": false,
    "timingInfo": null,
    "type": "default",
    "urlList": [],
  },
  Symbol(headers): _Headers {
    Symbol(headers list): _HeadersList {
      "cookies": null,
      Symbol(headers map): Map {
        "location" => {
          "name": "location",
          "value": "/start",
        },
      },
      Symbol(headers map sorted): null,
    },
    Symbol(guard): "response",
    Symbol(realm): {
      "settingsObject": {},
    },
  },
}
`;

exports[`Loaders > step6AccessGuard > returnerer redirect til /start location når ingen api kall er registrert 1`] = `
_Response {
  Symbol(realm): {
    "settingsObject": {},
  },
  Symbol(state): {
    "aborted": false,
    "cacheState": "",
    "headersList": _HeadersList {
      "cookies": null,
      Symbol(headers map): Map {
        "location" => {
          "name": "location",
          "value": "/start",
        },
      },
      Symbol(headers map sorted): null,
    },
    "rangeRequested": false,
    "requestIncludesCredentials": false,
    "status": 302,
    "statusText": "",
    "timingAllowPassed": false,
    "timingInfo": null,
    "type": "default",
    "urlList": [],
  },
  Symbol(headers): _Headers {
    Symbol(headers list): _HeadersList {
      "cookies": null,
      Symbol(headers map): Map {
        "location" => {
          "name": "location",
          "value": "/start",
        },
      },
      Symbol(headers map sorted): null,
    },
    Symbol(guard): "response",
    Symbol(realm): {
      "settingsObject": {},
    },
  },
}
`;
